Edited: quienes somos

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -7,10 +7,18 @@
 </head>
 <body>
     <h1>Quienes somos</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda non sit architecto corporis consequatur eos est nihil repudiandae recusandae, obcaecati minima voluptates. Quidem in et voluptatum esse amet ex dignissimos?
-    Doloremque rerum alias delectus impedit, cupiditate repellendus nobis optio mollitia officiis sunt sed architecto ad. Nulla totam commodi aspernatur nihil optio possimus quibusdam doloribus exercitationem ad, architecto, harum quos ipsam.
-    Ad, iste incidunt quia officiis consectetur reprehenderit asperiores pariatur suscipit quis recusandae ipsam amet adipisci? Ut sunt, possimus iure, corrupti autem laudantium perferendis repellat eligendi iusto enim eveniet molestiae pariatur?
-    Voluptatum, culpa. Reprehenderit labore alias placeat architecto atque accusantium quidem fugiat! Harum quo sed nam at libero temporibus hic aliquid praesentium consequuntur cupiditate, suscipit, earum quod unde accusamus dolorum doloribus!
-    Modi explicabo voluptates rerum nam quas molestiae alias, quasi a laboriosam recusandae adipisci, placeat enim, ducimus dignissimos exercitationem. Dolorem quod eum modi ut debitis quos odit cumque, doloremque iusto dignissimos?</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+         Sit dolore ipsa deserunt quae, iusto nostrum debitis
+         commodi fuga dolor consequuntur nemo, o
+         ptio voluptates nisi eaque minus nulla suscipit quibusdam vitae?</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur, 
+        distinctio ut illum neque, magni quas ullam, 
+        enim vitae repellendus numquam debitis perspiciatis.
+         Ut reprehenderit dignissimos illo a voluptatem fugit!
+    Temporibus maiores at molestiae provident labore vero!
+     Modi doloribus incidunt vitae, quas dolorum similique ut enim nulla sunt explicabo odio, 
+     illum rem optio quidem voluptas eligendi alias quo? Obcaecati, voluptatibus!</p>
+
 </body>
 </html>
